--- a/Home.css
+++ b/Home.css
@@ -1,19 +1,154 @@
 body{
     margin: auto ;
+    background: rgb(255,255,255);
+    /* gradient background */
+    background: linear-gradient(90deg, #001514 , rgb(0, 57, 56) 100%, #4b0069 100%);
+    color:white;
+    align-items: center;
+
 }
 .logo{
     text-align: left;
 
 }
 .navbar{
+     /* align */
     list-style: none;
-    font-size: 20px;
-    display: flex;
+    display:flex;
     justify-content: space-between;
     align-items: center;
-    background-color:rgba(64, 178, 203, 0.743);
-    padding-right: 5%;
+
+    background-color:#004b46;
+    /* padding */
+    padding-right:5%;
+    padding-left:5%;
+
+    /* font */
+    font-family: "Times New Roman", Times, serif;
+    font-size: 20px;
+    letter-spacing: 2px;
+    word-spacing: 2px;
+    color: #ffffff;
+    font-weight: normal;
+    text-decoration: none;
+    font-style: normal;
+    font-variant: normal;
+    text-transform: none;
+  
+    
+
+    
 }
 .navName{
+   /* font */
+    font-family: "Times New Roman", Times, serif;
     font-size: 25px;
+    letter-spacing: 2px;
+    word-spacing: 2px;
+    color: #ffffff;
+    font-weight: normal;
+    text-decoration: none;
+    font-style: normal;
+    font-variant: normal;
+    text-transform: none;
+
+}
+.h2c1{
+   
+    /* font */
+    font-family: "Times New Roman", Times, serif;
+    font-size: 30px;
+    letter-spacing: 2px;
+    word-spacing: 2px;
+    color: #ffffff;
+    font-weight: bold;
+    text-decoration: none;
+    font-style: normal;
+    font-variant: normal;
+    text-transform: none;
+
+}
+.container1{
+    /* align */
+    text-align: center;
+    justify-content: space-between;
+    margin: 12%;
+    background-color: #00878024;
+    /* padding */
+    padding-top:2%;
+    padding-bottom:2%;
+   
+  
+   border-radius:5%;
+
+    
+   
+}
+.pc1{
+   
+font-size: 19px;
+}
+.bc1{
+    background-color: #98ff98ad;
+    padding: 1%;
+    margin: 25px;
+    font: bolder;
+    font-size: 14px;
+    
+     /* font */
+     font-family: "Times New Roman", Times, serif;
+     font-size: 14px;
+     letter-spacing: 2px;
+     word-spacing: 2px;
+     color: #ffffff;
+     font-weight: bold;
+     text-decoration: none;
+     font-style: normal;
+     font-variant: normal;
+     text-transform: none;
+     
+     border-radius:15%;
+}
+.container2{
+    background-color: #00878024;
+    margin: 2.5%;
+    padding:8%;
+
+   
+}
+.container2sub{
+    display:flex;
+    justify-content: space-between;
+    align-items: center;
+    
+   
+}
+.h1c2{
+    /* font */
+    font-family: "Times New Roman", Times, serif;
+    font-size: 33px;
+    letter-spacing: 2px;
+    word-spacing: 2px;
+    color: #ffffff;
+    font-weight: bold;
+    text-decoration: none;
+    font-style: normal;
+    font-variant: normal;
+    text-transform: none;
+   
+  
+}
+.pc2{
+    padding-right: 5%;
+    font-size: 20px;
+ line-height: 2.3;
+ padding-bottom: 11.5%;
+ 
+}
+.footer{
+    
+    background-color: black;
+    font-size: 20px;
+    padding: 5%;
+ 
 }
