--- a/Editor.css
+++ b/Editor.css
@@ -1,3 +1,29 @@
+body{
+    margin: auto ;
+    background: rgb(255,255,255);
+    /* gradient background */
+    background: linear-gradient(90deg, #001514 , rgb(0, 57, 56) 100%, #4b0069 100%);
+    color:white;
+    align-items: center;
+
+}
+.logo{
+    text-align: left;
+
+}
+.navbar{
+    list-style: none;
+    font-size: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color:rgba(64, 178, 203, 0.743);
+    padding-right: 5%;
+}
+.navName{
+    font-size: 25px;
+}
+
 .banner{
     width: 100%;
     height: 300px;
@@ -19,9 +45,7 @@
    align-items: center;
    cursor: pointer;
 }
-.banner-upload-btn img{
-    width: 200px;
-}
+
 .blog{
     width: 70vw;
     min-width: 400px;
@@ -29,6 +53,7 @@
     display: block;
     margin: auto;
     padding: 50px 0;
+    padding-bottom: 80px;
 }
 
 .title{
@@ -46,10 +71,15 @@
 }
 .article{
     font-size: 20px;
+    width: 100%;
+    height: auto;
+    outline: none;
+   min-height:200px ;
+   margin-bottom: 100px;
 }
 .blog-image-options{
     position: fixed;
-    bottom: 0;
+    bottom: 20px;
     left: 0;
     width: 100%;
     height: 60px;
@@ -58,8 +88,47 @@
     justify-content: center;
     align-items: baseline;
 }
-.btm{
-    border: none;
-    outline: none;
+.btn{
+    border: #000000;
+   
+ 
+    outline: black;
     cursor: pointer;
+    background-color: #98ff98ad;
+    font-family: "Times New Roman", Times, serif;
+     font-size: 14px;
+     letter-spacing: 2px;
+     word-spacing: 2px;
+     color: #000000;
+     font-weight: bold;
+     text-decoration: none;
+     font-style: normal;
+     font-variant: normal;
+     text-transform: none;
+     padding: 1%;
+    margin: 25px;
+    font: bolder;
+    font-size: 14px;
+     border-radius:15%;
+}
+.publish-btn{
+    background-color: #98ff98ad;
+    padding: 1%;
+    margin: 25px;
+    font: bolder;
+    font-size: 14px;
+    
+     /* font */
+     font-family: "Times New Roman", Times, serif;
+     font-size: 14px;
+     letter-spacing: 2px;
+     word-spacing: 2px;
+     color: #000000;
+     font-weight: bold;
+     text-decoration: none;
+     font-style: normal;
+     font-variant: normal;
+     text-transform: none;
+     
+     border-radius:15%;
 }
