--- a/Editor.css
+++ b/Editor.css
@@ -3,7 +3,154 @@ body{
     background: rgb(255,255,255);
     /* gradient background */
     background: linear-gradient(90deg, #001514 , rgb(0, 57, 56) 100%, #4b0069 100%);
+    color:whibody{
+    margin: auto ;
+    background: rgb(255,255,255);
+    /* gradient background */
+    background: linear-gradient(90deg, #001514 , rgb(0, 57, 56) 100%, #4b0069 100%);
     color:white;
+    align-items: center;
+
+}
+.logo{
+    text-align: left;
+
+}
+.navbar{
+    list-style: none;
+    font-size: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color:#004b46;
+    padding-right: 5%;
+}
+.navName{
+    font-size: 25px;
+}
+
+.banner{
+    width: 100%;
+    height: 300px;
+    position: relative;
+    background: #00000089;
+    background-size: cover;
+    background-position: center;
+}
+.banner-upload-btn{
+    position: absolute;
+    bottom: 20px;
+    right: 20px;
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    background-color:#004b46;
+   color: rgb(244, 244, 244);
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   align-content: center;
+   cursor: pointer;
+   text-align: center;
+}
+
+.blog{
+    width: 70vw;
+    min-width: 400px;
+    height: 100px;
+    display: block;
+    margin: auto;
+    padding: 50px 0;
+    padding-bottom: 80px;
+    
+
+}
+
+.title{
+    width: 98.8%;
+    min-height: 100px;
+    height: auto;
+    outline: none;
+    font-size: 50px;
+    font-weight: 600;
+    color: black;
+    resize: none;
+    border: none;
+    padding: 10px;
+    border-radius: 10px;
+    background-color:#004b46 ;
+    margin-bottom: 30px;
+}
+.article{
+    font-size: 20px;
+    width: 100%;
+    height: auto;
+    outline: none;
+   min-height:200px ;
+   margin-bottom: 100px;
+   background-color:#004b46
+  
+}
+.blog-image-options{
+   margin-top: 15%;
+   margin-bottom:2%;
+    bottom: 20px;
+    left: 0;
+    width: 100%;
+    height: 60px;
+    background: #004b4633;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.btn{
+   
+    cursor: pointer;
+    background-color: #0000006f;
+    font-family: "Times New Roman", Times, serif;
+     font-size: 14px;
+     letter-spacing: 2px;
+     word-spacing: 2px;
+     color: #ffffff;
+     font-weight: bold;
+     text-decoration: none;
+     font-style: normal;
+     font-variant: normal;
+     text-transform: none;
+     padding: 1%;
+    margin: 25px;
+    font: bolder;
+    font-size: 14px;
+     border-radius:15%;
+}
+.publish-btn{
+    background-color: #0000006f;
+    padding: 1%;
+    margin: 25px;
+    font: bolder;
+    font-size: 14px;
+    
+     /* font */
+     font-family: "Times New Roman", Times, serif;
+     font-size: 14px;
+     letter-spacing: 2px;
+     word-spacing: 2px;
+     color: #ffffff;
+     font-weight: bold;
+     text-decoration: none;
+     font-style: normal;
+     font-variant: normal;
+     text-transform: none;
+     
+     border-radius:15%;
+}
+.footer{
+    
+    background-color: black;
+    font-size: 20px;
+    padding: 5%;
+ 
+}te;
     align-items: center;
 
 }
