--- a/Home.css
+++ b/Home.css
@@ -116,7 +116,7 @@ font-size: 19px;
      border-radius:15%;
 }
 .bc1:hover{
-background-color: #000000;
+background-color: #49ef47;
 
 transition:0.3s,ease;
 border-color: rgb(255, 255, 255);
